--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CreativeStats/Edit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CreativeStats/Edit.cshtml
@@ -5,8 +5,8 @@
     @Html.HiddenFor(m => m.CreativeStatId)
     <table>
         <tr>
-            <td>@Html.LabelFor(m => m.Name)</td>
-            <td>@Html.EditorFor(m => m.Name)</td>
+            <td>@Html.LabelFor(m => m.Creative.CreativeName)</td>
+            <td>@Html.EditorFor(m => m.Creative.CreativeName)</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.Clicks)</td>
