--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Create.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Create.cshtml
@@ -2,24 +2,30 @@
 
 <h4>Create</h4>
 
-@Html.ValidationSummary(true)
+@using (Ajax.BeginForm(new AjaxOptions { })) //UpdateTargetId =
+{
+    @Html.ValidationSummary()
 
-<fieldset>
-    <legend>Campaign Drop</legend>
+    <fieldset>
+        <legend>Campaign Drop</legend>
+        @Html.HiddenFor(m => m.CampaignId)
+        <table>
+            <tr>
+                <td>Campaign</td>
+                <td>@Html.DisplayFor(m => m.Campaign.CampaignName)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(m => m.Date)</td>
+                <td>@Html.TextBoxFor(m => m.Date, "{0:d}")</td>
+            </tr>
+            <tr>
+                <td>Creative</td>
+                <td>@Html.EditorFor(_ => ViewData["Creatives"], "CreativeDropDown", "CreativeId")</td>
+            </tr>
+        </table>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Date)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Date)
-            @Html.ValidationMessageFor(model => model.Date)
-        </div>
+        <br />
+        <input type="submit" value="Create Drop" />
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Cost)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Cost)
-            @Html.ValidationMessageFor(model => model.Cost)
-        </div>
-</fieldset>
+    </fieldset>
+}
