--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Campaigns/Show.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Campaigns/Show.cshtml
@@ -1,9 +1,10 @@
 ﻿@model ClientPortal.Data.Contexts.Campaign
 
-Campaign: <b>@Model.CampaignName</b>
-<br /><br />
-Affiliate: @Model.Affiliate.AffiliateName
+<h3>Campaign Summary</h3>
 
+Campaign: @Model.CampaignName
+<br />
+Affiliate: @Model.Affiliate.AffiliateName
 <br /><br />
 
 @Html.Partial("../CampaignDrops/Index", Model.CampaignDrops.OrderBy(d => d.Date))
