--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Offers/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Offers/Index.cshtml
@@ -7,7 +7,7 @@
         <th>AdvId</th>
         <th>Advertiser</th>
         <th>OfferId</th>
-        <th>Offer</th>
+        <th>Offer (click for summary)</th>
         <th>Edit</th>
     </tr>
 @foreach (var offer in Model)
