--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Offers/Show.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Offers/Show.cshtml
@@ -1,5 +1,9 @@
 ﻿@model ClientPortal.Data.Contexts.Offer
 
+<h3>Offer Summary</h3>
+
+Advertiser: @Model.Advertiser.AdvertiserName
+<br />
 Offer: @Model.OfferName (@Model.OfferId)
 <br /><br />
 
