--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Campaigns/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Campaigns/Index.cshtml
@@ -23,7 +23,7 @@
         <td>@campaign.CampaignName</td>
         <td>@campaign.Affiliate.AffiliateName</td>
         <td>@campaign.CampaignDrops.Count</td>
-        <td>@Html.ActionLink("Show Drops", "Show", new { id = campaign.CampaignId })
+        <td>@Html.ActionLink("Campaign Summary", "Show", new { id = campaign.CampaignId })
             &nbsp;|&nbsp;&nbsp;@Html.ActionLink("New Drop", "Create", "CampaignDrops", new { campaignid = campaign.CampaignId }, null)
         </td>
     </tr>
@@ -33,5 +33,5 @@
 @if (offerId.HasValue)
 {
     <br />
-    @Html.ActionLink("Show All Drops", "Index", "CampaignDrops", new { offerid = offerId.Value }, null)
+    @Html.ActionLink("Show all drops for Offer " + offerId.Value, "Index", "CampaignDrops", new { offerid = offerId.Value }, null)
 }
