--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Campaigns/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Campaigns/Index.cshtml
@@ -15,11 +15,11 @@
     <tr>
         <th>Campaign</th>
         <th>Affiliate</th>
-        <th>Drops</th>
+        <th colspan="2">Drops</th>
     </tr>
 @foreach (var campaign in Model)
 {
-    string viewText = "View (" + campaign.CampaignDrops.Count + ")";
+    string viewText = "View Drops (" + campaign.CampaignDrops.Count + ")";
     <tr>
         <td>@campaign.CampaignName</td>
         <td>@campaign.Affiliate.AffiliateName</td>
